fix: replace placeholder url

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: My Testimony Blog
 description: A collection of inspiring testimonies
-baseurl: ""
-url: "https://<yourusername>.github.io"
+baseurl: "/"
+url: "https://witness-and-wonder.github.io"
 theme: minima
 
 # Build settings
